# QuentORM

./: .env-example  .gitignore  CASO_DE_USO.md  CHANGELOG.md  MANUAL.md  QUENTORM-CLI.md  README.md  config.py  pyproject.toml  requirements.txt  test_import.py  test_quentorm.py  test_sqlalchemy.py
app/: __init__.py
app/api/: routes.py
app/models/: base.py  cliente.py  conta_bancaria.py  conta_pagar.py  conta_receber.py  fornecedor.py  lancamento.py  nomedomodelo.py  user.py
app/rpa/: processamento.py
app/validators/: custom_validators.py
config/: __init__.py  database.py  messages.py  settings.py
config/messages/: fr.json  pt_br.json
config/validators/: custom_validators.py  project_validators.py
database/migrations/: 20250412193455_create_users_table.py
docs/: CASO_DE_USO.md  MANUAL.md  QUENTORM-CLI.md  VALIDACOES.md
examples/: schema_example.py
models/: user.py
projeto_usuario/: CASO_DE_USO.md
projeto_usuario/config/: settings.py
projeto_usuario/config/messages/: en.json  es.json  pt_br.json
projeto_usuario/config/validators/: __init__.py  custom_validators.py  model_validators.py  project_validators.py
projeto_usuario/models/: __init__.py  base.py  post.py
quentorm/: __init__.py  __main__.py  cli.py
quentorm/cli/: main.py
quentorm/cli/commands/: new.py  validator.py
quentorm/commands/: __init__.py  make.py  new.py
quentorm/utils/: __init__.py  models.py  project.py  validators.py
quentorm/utils/messages/: pt_br.json
quentorm/validators/: default_validators.py
